--- a/g6.CSS
+++ b/g6.CSS
@@ -2,16 +2,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 #col2{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 #col3{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .color{
     color:#FFAB00
@@ -64,6 +67,21 @@ li::marker {
     word-wrap: break-word;
     background-color: whitesmoke;
     border-radius: 10px;
+}
+
+/* button animation */
+a.btn:hover{
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+/* card animation */
+.card:hover{
+    scale: 1.05;
+    transition: scale 200ms;
+}
+.btn{
+    background-color: #FFAB00;
 }
 
 .comment-box{
