--- a/g6.CSS
+++ b/g6.CSS
@@ -46,6 +46,9 @@ li::marker {
     margin-right: auto;
 }
 
-footer{
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
